parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    1DIA
    1HORA
    2DIAS
    30MIN
    ALPHA
    BEGIN
    BOOLEAN
    BROWSER
    CRITIQUE
    DS_CCOCH
    DS_CKEY
    DS_COMMA
    DS_OCOCH
    DS_OKEY
    DS_POINT
    DS_POINT_COMMA
    ELSE
    EMAIL
    EMPTY
    END
    EXPLORE
    FALSE
    FASES_EPIC
    FOR
    FUNCTION
    IF
    INT
    INTERACT
    LINK_EMAIL
    LINK_PDF
    LINK_VIDEO
    LINK_VIDEOCONFERENCIA
    LINK_WHATSAPP_WEB
    NAVEGADOR
    PRESENT
    PRINT
    READ
    REAL
    RETURN
    RO_DIFF
    RO_EQUAL
    RO_THAN_LESS
    RO_THAN_LESS_OR_EQUAL
    RO_THAN_MORE
    RO_THAN_MORE_OR_EQUAL
    SEQUENCIA
    TEMPO
    THEN
    TRUE
    VIDEOCONFERENCIA
    VISUALIZAR_PDF
    VISUALIZAR_VIDEO
    WHATSAPP_WEB
    WHILE
    WRITE

Grammar

Rule 0     S' -> programa_SOL
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> term
Rule 4     term -> term TIMES factor
Rule 5     term -> term DIVIDE factor
Rule 6     term -> factor
Rule 7     factor -> NUMBER
Rule 8     factor -> LPAREN expression RPAREN
Rule 9     programa_SOL -> PROGRAMA_SOL LOOP NUMBER NAVEGAR NO_LIMIT
Rule 10    programa_SOL -> NAVEGAR

Terminals, with rules where they appear

1DIA                 : 
1HORA                : 
2DIAS                : 
30MIN                : 
ALPHA                : 
BEGIN                : 
BOOLEAN              : 
BROWSER              : 
CRITIQUE             : 
DIVIDE               : 5
DS_CCOCH             : 
DS_CKEY              : 
DS_COMMA             : 
DS_OCOCH             : 
DS_OKEY              : 
DS_POINT             : 
DS_POINT_COMMA       : 
ELSE                 : 
EMAIL                : 
EMPTY                : 
END                  : 
EXPLORE              : 
FALSE                : 
FASES_EPIC           : 
FOR                  : 
FUNCTION             : 
IF                   : 
INT                  : 
INTERACT             : 
LINK_EMAIL           : 
LINK_PDF             : 
LINK_VIDEO           : 
LINK_VIDEOCONFERENCIA : 
LINK_WHATSAPP_WEB    : 
LOOP                 : 9
LPAREN               : 8
MINUS                : 2
NAVEGADOR            : 
NAVEGAR              : 9 10
NO_LIMIT             : 9
NUMBER               : 7 9
PLUS                 : 1
PRESENT              : 
PRINT                : 
PROGRAMA_SOL         : 9
READ                 : 
REAL                 : 
RETURN               : 
RO_DIFF              : 
RO_EQUAL             : 
RO_THAN_LESS         : 
RO_THAN_LESS_OR_EQUAL : 
RO_THAN_MORE         : 
RO_THAN_MORE_OR_EQUAL : 
RPAREN               : 8
SEQUENCIA            : 
TEMPO                : 
THEN                 : 
TIMES                : 4
TRUE                 : 
VIDEOCONFERENCIA     : 
VISUALIZAR_PDF       : 
VISUALIZAR_VIDEO     : 
WHATSAPP_WEB         : 
WHILE                : 
WRITE                : 
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 8
factor               : 4 5 6
programa_SOL         : 0
term                 : 1 2 3 4 5

Parsing method: LALR

state 0

    (0) S' -> . programa_SOL
    (9) programa_SOL -> . PROGRAMA_SOL LOOP NUMBER NAVEGAR NO_LIMIT
    (10) programa_SOL -> . NAVEGAR

    PROGRAMA_SOL    shift and go to state 2
    NAVEGAR         shift and go to state 3

    programa_SOL                   shift and go to state 1

state 1

    (0) S' -> programa_SOL .



state 2

    (9) programa_SOL -> PROGRAMA_SOL . LOOP NUMBER NAVEGAR NO_LIMIT

    LOOP            shift and go to state 4


state 3

    (10) programa_SOL -> NAVEGAR .

    $end            reduce using rule 10 (programa_SOL -> NAVEGAR .)


state 4

    (9) programa_SOL -> PROGRAMA_SOL LOOP . NUMBER NAVEGAR NO_LIMIT

    NUMBER          shift and go to state 5


state 5

    (9) programa_SOL -> PROGRAMA_SOL LOOP NUMBER . NAVEGAR NO_LIMIT

    NAVEGAR         shift and go to state 6


state 6

    (9) programa_SOL -> PROGRAMA_SOL LOOP NUMBER NAVEGAR . NO_LIMIT

    NO_LIMIT        shift and go to state 7


state 7

    (9) programa_SOL -> PROGRAMA_SOL LOOP NUMBER NAVEGAR NO_LIMIT .

    $end            reduce using rule 9 (programa_SOL -> PROGRAMA_SOL LOOP NUMBER NAVEGAR NO_LIMIT .)

